# aigap

./: .aigap-policy.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DECK_BRIEF.md  FEATURES.md  PLAYBOOK.md  README.md  pyproject.toml
.github/workflows/: aigap-ci.yaml  aigap-release.yaml  aigap-reusable.yml
aigap/: cli.py  config.py
aigap/hooks/: check.py  validate.py
aigap/loaders/: dataset_loader.py  policy_loader.py
aigap/models/: dataset.py  evaluation.py  policy.py  report.py
aigap/pipeline/: analyzer.py  cache.py  classifier.py  orchestrator.py  synthesizer.py
aigap/plugins/: __init__.py  base.py  registry.py
aigap/report/: gha_summary.py  json_report.py  markdown.py
aigap/scoring/: coverage.py  drift.py  efficacy.py
aigap/server/: app.py  sse.py
docs/: aigap-engineering-leadership.pptx  executive-presentation.md  index-design.md
docs/runbooks/: README.md  baseline-drift.md  ci-integration.md  dashboard.md  dataset-management.md  getting-started.md  llm-chain.md  plugin-development.md  policy-authoring.md  troubleshooting.md
examples/coding_assistant/: golden_dataset.jsonl  policy.yaml
prompts/: README.md  audit-report.md  change-impact.md  define-policies.md  framework-map.md  gap-analysis.md  generate-enforcement.md  po-status-report.md  pr-description.md  release-notes.md  sprint-feed.md  update-policy.md  validate-policies.md
tests/: golden_dataset.jsonl
vscode-extension/: .eslintrc.json  .vscodeignore  package-lock.json  package.json  tsconfig.json
vscodebase/: package.json  tsconfig.json
(+85 files in other folders)
